--- a/css/estilo.css
+++ b/css/estilo.css
@@ -18,18 +18,20 @@ body{
     background-color: white;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    width: 100%;
 
 }
 
 .logo{
     flex: 20%;
-    text-align: center;
+    margin-left: 10%;
+    text-align: left;
 
 }
 
 .logo h1{
     font-family: 'Lobster', cursive;
-    margin-left: 10%;
     color: #180F4A;
     font-size: 34px;
 
@@ -37,7 +39,7 @@ body{
 
 .menu {
     flex: 70%;
-    text-align: right;
+     text-align: right;
     padding: 20px;
 
 }
@@ -61,7 +63,7 @@ body{
     padding: 10px 25px;
     color: white;
     border-radius: 5px;
-    margin-right: 10px;
+    margin-right: 10%;
     margin-left: 5%;
 
 }
@@ -78,6 +80,7 @@ body{
     justify-content: center;
     align-items: center;
     background-color: white;
+    padding-top: 100px;
 
 }
 
@@ -123,5 +126,97 @@ body{
     margin-right: 10%;
     flex: 40%;
     text-align: center;
+
+}
+
+section{
+    display: inline-block;
+    margin-top: 80px;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 5%;
+    text-align: center;
+
+}
+
+section h2{
+    width: 100%;
+    font-size: 50px;
+    margin: 0;
+    font-family: 'Lobster', cursive;
+    font-weight: bold;
+    color: #180F4A;
+}
+
+.servicos{
+    display: inline-block;
+    margin: 5%;
+
+}
+
+.card{
+    display: inline-block;
+    width: 30%;
+    padding: 20px;
+    margin: 1%;
+    border: 1px solid #FF2978;
+    border-radius: 10px;
+    cursor: pointer;
+    
+}
+
+.texto-oculto{
+    display: none;
+    
+}
+
+.card:hover{
+    background-color: #FF2978;
+    color: white;
+    padding: 40px;
+
+}
+
+.card:hover img{
+    display: none;
+
+}
+
+.card:hover .card-text{
+    display: none;
+
+}
+
+.card:hover .texto-oculto{
+    display: block;
+
+}
+
+footer{
+    margin-top: 100px;
+    height: 400px;
+    background-image: linear-gradient(180deg, #180F4A, #090422, black);
+    text-align: center;
+    border-top: 5px solid #FF2978;
+
+}
+
+.logo-rodape{
+    padding: 100px;
+   
+}
+
+.agencia{
+    font-family: 'Lobster', cursive;
+    color: white;
+    font-size: 34px;
+
+}
+
+.whats{
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
+    width: 100px;
 
 }
